@@ -204,4 +204,4 @@ would be mandatory, in the current specification system.
      <dd>
  An attribute named a_nokind, with unspecified kind.
 </dd></dl></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Thu Jun 18 15:28:56 2009</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Thu Jun 18 16:55:56 2009</div></body></html>
