@@ -370,8 +370,9 @@ for MS compilers (see ANNOUNCE and ChangeLog).
 </p>
   <p>
  As of 09-06-18, I have tested the latest revision successfully on
-an AMD64 in 64 bits mode with Ubuntu 7.10 and in 32 bits mode with
-Ubuntu 9.04, with Python 2.3, 2.4, 2.5 and 2.6 .
+an AMD64 in 64 bits mode with Ubuntu 7.10 with Python 2.3, 2.4, 2.5
+and 2.6, and in 32 bits mode with Ubuntu 9.04 with Python 2.4, 2.5 and
+2.6 .
 </p>
   <p>
  To check out the latest (HEAD) revision, you can do:
@@ -384,7 +385,7 @@ svn co https://guppy-pe.svn.sourceforge.net/svnroot/guppy-pe/trunk/guppy guppy
 (2009-06-18, guppy-0.1.9), you can do:
 </p>
   <pre>
-svn co -r77 https://guppy-pe.svn.sourceforge.net/svnroot/guppy-pe/trunk/guppy guppy
+svn co -r78 https://guppy-pe.svn.sourceforge.net/svnroot/guppy-pe/trunk/guppy guppy
 
 </pre>
   <h3> Source code releases in tarball format</h3>
@@ -499,4 +500,4 @@ system:
    <dd><a href='http://sourceforge.net/tracker/?group_id=105577&atid=641821'> http://sourceforge.net/tracker/?group_id=105577&amp;atid=641821</a></dd>
    <dt> The Sourceforge project summary page is:</dt>
    <dd><a href='http://sourceforge.net/projects/guppy-pe'> http://sourceforge.net/projects/guppy-pe</a></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Thu Jun 18 15:28:55 2009</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Thu Jun 18 16:55:56 2009</div></body></html>
